--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -17,7 +17,7 @@
     <div class="max-w-3xl min-h-full flex items-center justify-center mx-auto mb-20 py-8 sm:px-6 md:px-0 lg:px-0">
     
         <!-- Inner Container -->
-        <div class="w-full bg-white shadow-md rounded-lg px-10 py-8">
+        <div class="w-full bg-white -mt-4 shadow-md rounded-lg px-10 py-8">
     
             <!-- Form itle -->
             <div class="w-full mb-6 md:w-[450px] md:mx-auto">
@@ -76,6 +76,12 @@
                     <div>
                         <label for="cadre" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.cadre.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
                         {% render_field form.cadre class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
+                    </div>
+
+                    <!-- First Appointment -->
+                    <div>
+                        <label for="department" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.first_appointment.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.first_appointment id="datepicker" type=text class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
                     
                     <!-- Department -->
