--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -15,7 +15,7 @@
     {% include 'snippets/searchbar.html' %}
     
     <!-- Profile Card -->
-    <div class="max-w-3xl mx-auto px-8 mb-32 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
+    <div class="max-w-3xl mx-auto px-8 mt-8 mb-32 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
 
         <!-- Container -->
         <div class="flex flex-col items-center py-8">
@@ -49,7 +49,7 @@
                             <p class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>cadre not given</em></p>
                     {% endif %}
                 </span>
-            </div>            
+            </div> 
 
             <!-- Department -->
             <div class="flex flex-row items-center justify-center mb-8 md:mb-4">
@@ -113,7 +113,7 @@
                                 <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
                         {% endif %}
                     </span>
-                </div>
+                </div> 
             
                 <!-- Phone Number -->
                 <div class="flex flex-row items-center justify-center">
@@ -162,7 +162,23 @@
                         {% endif %}
                     </span>
                 </div>
-            </div>            
+            </div>                      
+            
+            <!-- First Appointment -->
+            <div class="flex flex-row items-center justify-center mb-4">
+                <span class="inline-flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 -mt-1 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                    </svg>
+                    {% if staff.first_appointment %}
+                    <p class="items-center text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.first_appointment }}</p>
+                    {% else %}
+                    <p class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>01/01/2000</em></p>
+                    {% endif %}
+                </span>
+            </div>
             
 
             <!-- Update and Remove buttons -->
