--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -12,7 +12,7 @@
     
     
     <!-- Staff list -->
-    <div class="p-6 md:pb-4 max-w-3xl mb-20 md:mb-24 bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
+    <div class="p-6 md:pb-4 mt-8 max-w-3xl mb-20 md:mb-24 bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>    
         </div>
