edited imagefield in updateview 12:30AM 11/07/2022

--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -23,7 +23,7 @@
     <div class="min-h-full flex items-center justify-center mb-8 py-8 sm:px-6 lg:px-8">
     
         <!-- Inner Container -->
-        <div class="max-w-3xl w-full bg-white shadow-md rounded-lg px-10 py-8">
+        <div class="max-w-3xl -mt-4 w-full bg-white shadow-md rounded-lg px-10 py-8">
     
             <!-- Title -->
             <div>
