--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -124,6 +124,7 @@
                     <div>
                         <label for="staff_image" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.staff_image.label }}<span class="ml-1 text-2xl"></span></label>
                         {% render_field form.staff_image class+="cursor-pointer text-md md:text-md font-medium block rounded-md md:w-full w-full px-3 py-2 border border-2 border-gray-300 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" %}                        
+                        <p class="mt-1 text-sm text-gray-500 dark:text-gray-300" id="file_input_help">PNG, JPG or GIF (MAX. 1500x1500px).</p>
                     </div>
                 </div>
                 
