--- a/sendmail/templates/snippets/pagination_stafflist.html
+++ b/sendmail/templates/snippets/pagination_stafflist.html
@@ -56,9 +56,13 @@
                 <div>
                     <p class="text-md text-gray-700">
                         Showing
-                        <span class="font-medium">1</span>
+                        <span class="font-medium">
+                            {{ page_obj.start_index }}
+                        </span>
                         to
-                        <span class="font-medium">10</span>
+                        <span class="font-medium">
+                            {{ page_obj.end_index }}
+                        </span>
                         of
                         <span class="font-medium">{{ total_staff }}</span>
                         results
