--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -10,21 +10,24 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+		<link rel="stylesheet" href="/resources/demos/style.css">
 
-		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
-		<!-- Fengyuan Chen's Datepicker -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
-	
+		<!-- jQuery Datepicker -->		
+		<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+		<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>	
 		
 		<!-- <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js" /> -->
 
 		<!-- Date Picker JS -->
 		<script>
 			$( function() {
-				$( "#datepicker" ).datepicker();
+			  $( "#datepicker" ).datepicker({
+				changeMonth: true,
+				changeYear: true,
+				showButtonPanel: true
+			  });
 			} );
 		</script>
 
