updated pagination_stafflist 11:56 PM 12/07/2022

--- a/staffapp/templates/snippets/pagination_stafflist.html
+++ b/staffapp/templates/snippets/pagination_stafflist.html
@@ -64,8 +64,7 @@
                             {{ page_obj.end_index }}
                         </span>
                         of
-                        <span class="font-medium">{{ total_staff }}</span>
-                        results
+                        <span class="font-medium">{{ total_staff }}</span>results
                     </p>
                 </div>
                 
@@ -100,7 +99,7 @@
                                 </a>
                                 {% if page_obj.number > 4 %}
                                     <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 
-                                            bg-white text-sm font-medium text-gray-700">... </span>
+                                            bg-white text-sm font-medium text-gray-700">...</span>
                                 {% endif %}
                             {% endif %}
 
