--- a/staffapp/templates/updatestaff.html
+++ b/staffapp/templates/updatestaff.html
@@ -29,7 +29,7 @@
                         alt="{{ staff.first_name }} {{ staff.last_name }} image">
                 </div>
     
-                <!-- Form itle -->
+                <!-- Form title -->
                 <div class="w-full mb-6 md:w-[450px] md:mx-auto">
                     <h2 class="text-center text-3xl font-extrabold text-gray-900">
                         Update: <span class="underline underline-offset-4"><em>{{ staff.first_name }} {{ staff.last_name }}</em></span>
