code update 12:23 AM 20/07/2022

--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -32,7 +32,7 @@
                         
                 <!-- Profile Picture -->
                 <div class="mb-4 flex flex-col items-center">
-                    <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-lg" src="{% static 'img/default-male.jpg' %}"
+                    <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-lg" src="{% static 'img/default-female.jpg' %}"
                         alt="{{ staff.first_name }} {{ staff.last_name }} image">
                 </div>
     
