code update 9:35 AM 22/07/2022

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,8 +75,8 @@
 			<div class="container flex flex-wrap justify-between items-center mx-auto">
 	
 				<!-- Logo -->
-				<a href="https://wcce.org.ng" class="flex items-center">
-					<img src="{% static 'img/mitc-logo-trans.png' %}" class="mr-3 md:h-9 h-8" alt="Flowbite Logo">
+				<a href="https://mitc.edostate.gov.ng" class="flex items-center">
+					<img src="{% static 'img/mitc-logo-trans.png' %}" class="mr-3 md:h-8 h-8" alt="MITC-logo">
 					<span class="self-center text-xl text-gray-700 font-extrabold whitespace-nowrap dark:text-white">Staff
 						Directory</span>
 				</a>
