--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -20,10 +20,10 @@
     </script> -->
 
     <!-- Outer Container -->
-    <div class="min-h-full flex items-center justify-center mb-8 py-8 sm:px-6 lg:px-8">
+    <div class="min-h-full flex items-center justify-center -mb-4 md:-mb-4 py-8 sm:px-6 lg:px-8">
     
         <!-- Inner Container -->
-        <div class="max-w-3xl -mt-4 w-full bg-white shadow-md rounded-lg px-10 py-8">
+        <div class="w-full lg:max-w-3xl -mt-4 bg-white shadow-md rounded-lg px-10 py-8">
     
             <!-- Form -->
             <form action="" method="POST" enctype="multipart/form-data">
@@ -32,7 +32,7 @@
                         
                 <!-- Profile Picture -->
                 <div class="mb-4 flex flex-col items-center">
-                    <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-lg" src="{% static 'img/default-female.jpg' %}"
+                    <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{% static 'img/default-female.png' %}"
                         alt="{{ staff.first_name }} {{ staff.last_name }} image">
                 </div>
     
@@ -138,7 +138,7 @@
                     <!-- Add -->
                     <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-transparent 
                                                 text-md font-medium rounded-md text-white bg-blue-700 hover:bg-blue-600 focus:outline-none 
-                                                 focus:ring-4 focus:ring-offset-2 focus:ring-blue-500">
+                                                 focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                             <!-- Heroicon name: user-plus -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
@@ -152,7 +152,7 @@
                     <!-- Clear form -->
                     <button type="reset" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-red-700 
                                                 text-md font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none 
-                                                 focus:ring-4 focus:ring-offset-2 focus:ring-red-500 hover:border-red-600">
+                                                 focus:ring-2 focus:ring-offset-2 focus:ring-red-500 hover:border-red-600">
                         Reset
                     </button>
                 </div>
