rectified profile_picture() 2:18 AM 23/07/2022

--- a/staffapp/templates/staffdeleted.html
+++ b/staffapp/templates/staffdeleted.html
@@ -20,11 +20,12 @@
             <div class="relative w-full">
 
                 <!-- Input -->
-                <input type="text" id="simple-search" name="q" class="bg-white block font-medium border border-none text-gray-900 text-lg rounded-md 
-                                                        focus:border-blue-500 block w-full p-4  
-                                                        focus:ring-2 focus:outline-none focus:ring-blue-500
-                                                        dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
-                                                        dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                <input type="text" id="simple-search" name="q" 
+                    class="bg-white block font-medium border border-none text-gray-900 text-lg rounded-md 
+                            focus:border-blue-500 block w-full p-4  
+                            focus:ring-2 focus:outline-none focus:ring-blue-500
+                            dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
+                            dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     placeholder="Search for a staff..." required>
             </div>
 
@@ -47,7 +48,7 @@
         <!-- Container -->
         <div class="flex flex-col items-center py-8">
 
-            <!-- Exclamation icon -->
+            <!-- Checkmark icon -->
             <svg class="mx-auto mb-4 w-14 h-14 text-green-600 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                 stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
