--- a/staffapp/templates/searchresult.html
+++ b/staffapp/templates/searchresult.html
@@ -29,7 +29,7 @@
                             <div class="flex items-center space-x-4">
                                 <!-- Profile Picture -->
                                 <div class="flex-shrink-0">
-                                    <img class="w-14 h-14 rounded-full" src="{{ staff.staff_image.url }}"
+                                    <img class="w-14 h-14 rounded-full" src="{{ staff.profile_picture.url }}"
                                         alt="{{ staff.first_name }}'s' image">
                                 </div>
             
