--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -74,7 +74,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                         </svg>
-                        <p class="text-lg font-bold text-gray-500 text-center dark:text-gray-400">{{ staff.gender }}</p>
+                        <p class="text-lg font-bold text-gray-500 text-center dark:text-gray-400">{{ staff.gender_text }}</p>
                     </span>
                 </div>            
             
