--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -21,7 +21,7 @@
         <div class="flex flex-col items-center py-8">
 
             <!-- Profile Image -->
-                <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{{ staff.profile_picture.url }}"
+                <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{{ staff.update_profile_picture.url }}"
                     alt="{{ staff.first_name }} {{ staff.last_name }} image">
             
             <!-- Name -->
